// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ViewRecord  should render a DOI link 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <DoiLink
              DoiId="10.1016/j.pnsc.2012.12.004"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Open Access - Embargo applies"
          >
            Open Access - Embargo applies
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render a PubMed Central link 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <PubmedCentralLink
              pubmedCentralId="PMC5179926"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Full text from PubMed Central"
          >
            Full text from PubMed Central
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render empty div 1`] = `
<div
  className="links empty"
/>
`;

exports[`Component ViewRecord  should render list of links with OA icons 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="https://scholar.google.com/scholar?q=intitle:%22undefined%22"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Search Google Scholar for this open access article"
            >
              https://scholar.google.com/scholar?q=intitle:"undefined%22
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Search Google Scholar for this open access article"
          >
            Search Google Scholar for this open access article
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="No description available"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render list of links with OA icons due to no embargo days 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="https://scholar.google.com/scholar?q=intitle:%22undefined%22"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Search Google Scholar for this open access article"
            >
              https://scholar.google.com/scholar?q=intitle:"undefined%22
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Search Google Scholar for this open access article"
          >
            Search Google Scholar for this open access article
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="No description available"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render list of links with closed OA icons due to DOI OA status 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <DoiLink
              DoiId="10.1016/j.pnsc.2012.12.004"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="DOI"
          >
            DOI
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="No description available"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render list of links with locked OA icons due to embargo date in the future 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="https://scholar.google.com/scholar?q=intitle:%22undefined%22"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Search Google Scholar for this open access article"
            >
              https://scholar.google.com/scholar?q=intitle:"undefined%22
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Search Google Scholar for this open access article"
          >
            Search Google Scholar for this open access article
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Open access after 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessEmbargoed large"
                title="undefined - Open access after 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Open access after 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessEmbargoed large"
                title="undefined - Open access after 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="No description available"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Open access after 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessEmbargoed large"
                title="undefined - Open access after 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;
